k8s/keycloak/keycloak-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
  namespace: cloud-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5433  # Change from 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: keycloak-postgres-pvc
