k8s/keycloak/keycloak-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  namespace: cloud-platform
spec:
  selector:
    app: keycloak-postgres
  ports:
    - protocol: TCP
      port: 5433
      targetPort: 5433
  type: ClusterIP
