k8s/keycloak/keycloak-service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  namespace: cloud-platform
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: keycloak-postgres
  type: ClusterIP
